2000-03-27  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* pairs.h (SCM_CAR, SCM_CDR, SCM_SETCAR, SCM_SETCDR):  Use
	SCM_CELL_OBJECT and SCM_SET_CELL_OBJECT.  This change implies that
	with strict type checking enabled these macros will only work if
	given valid SCM parameters.

	* (SCM_GCCDR):  Moved to tags.h.

	* tags.h (SCM_GCCDR):  Moved here from pairs.h.

2000-03-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tags.h (SCM2PTR, PTR2SCM):  Moved to gc.h.

	* pairs.h (scm_cell, SCM_CELLPTR, SCM_CELL_WORD*, SCM_CELL_OBJECT*,
	SCM_SET_CELL_WORD*, SCM_SET_CELL_OBJECT*, SCM_CELL_TYPE,
	SCM_SET_CELL_TYPE, SCM_PTR_LT, SCM_PTR_MASK, SCM_PTR_GT,
	SCM_PTR_LE, SCM_PTR_GE, SCM_CELL_WORD_LOC, SCM_NEWCELL,
	SCM_NEWCELL2): 	Moved to gc.h.

	(SCM_CARLOC, SCM_CDRLOC, SCM_SETAND_CAR, SCM_SETAND_CDR,
	SCM_SETOR_CAR, SCM_SETOR_CDR):  Moved to gc.h.  These names should
	be changed, though, since the macros are not only pair related.

	(SCMPTR):  Deleted.

	* gc.h (SCM2PTR, PTR2SCM, scm_cell, SCM_CELLPTR, SCM_CELL_WORD*,
	SCM_CELL_OBJECT*, SCM_SET_CELL_WORD*, SCM_SET_CELL_OBJECT*,
	SCM_CELL_TYPE, SCM_SET_CELL_TYPE, SCM_PTR_LT, SCM_PTR_MASK,
	SCM_PTR_GT, SCM_PTR_LE, SCM_PTR_GE, SCM_CELL_WORD_LOC,
	SCM_NEWCELL, SCM_NEWCELL2, SCM_CARLOC, SCM_CDRLOC, SCM_SETAND_CAR,
	SCM_SETAND_CDR, SCM_SETOR_CAR, SCM_SETOR_CDR):  Moved here from
	tags.h and pairs.h.

2000-03-25  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tags.h (SCM_STRICT_TYPING):  New macro that, if defined,
	activates strict compile time type checking for variables of
	type SCM.
	(SCM, SCM_PACK, SCM_UNPACK):  Define according to whether
	SCM_STRICT_TYPING or SCM_VOIDP_TEST are defined.
	(SCM_EQ_P):  Defined as a macro equivalent for eq?.

2000-03-25  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tags.h (SCM_POINTERS_MUNGED):  Removed.

	* gc.c (scm_gc_sweep, init_heap_seg):  Removed use of
	SCM_POINTERS_MUNGED, thus fixing some illegal casts to SCM.

2000-03-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>
