@@ -1,5 +1,14 @@
 2000-03-27  Dirk Herrmann  <D.Herrmann@tu-bs.de>
 
+	* gc.h (SCM_NEWCELL, SCM_NEWCELL2):  Use SCM_SET_CELL_TYPE to set
+	the type entry of a new cell.  Added a comment about things to
+	remember when updating the list of free cells.
+
+	(SCM_FREEP, SCM_MARKEDP):  Use SCM_CELL_TYPE to access the type
+	entry of a cell.
+
+2000-03-27  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
 	* pairs.h (SCM_CAR, SCM_CDR, SCM_SETCAR, SCM_SETCDR):  Use
 	SCM_CELL_OBJECT and SCM_SET_CELL_OBJECT.  This change implies that
 	with strict type checking enabled these macros will only work if
